--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="pe.edu.cibertec.proyecto_efrst">
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_EFRST"
         tools:targetApi="31">
+
+        <!-- SplashActivity como actividad principal -->
         <activity
-            android:name=".home.MainActivity"
+            android:name=".activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Otras actividades -->
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".home.MainActivity" />
+
     </application>
 
 </manifest>
