--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".home.MainActivity" />
+        <activity android:name=".home.ProductListActivity" />
+        <activity android:name=".home.ProductDetailActivity" />
+
 
     </application>
 
